Update full app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,16 @@
 fastapi==0.104.1
 uvicorn==0.23.2
 httpx==0.25.1
-pydantic==2.4.2
+pydantic<2
 python-dotenv==1.0.0
 openai==1.3.5
 python-multipart==0.0.6
 jinja2==3.1.2
 aiofiles==23.1.0
-aiofiles
-fastapi
 gunicorn
-httpx
-jinja2
-openai
-pydantic
-python-dotenv
-python-multipart
-starlette
-uvicorn
-fastapi
-python-dotenv
-uvicorn
-aiofiles
-fastapi
-httpx
-jinja2
-openai
-pydantic
-python-dotenv
-python-multipart
-uvicorn
-fastapi
-jinja2
-python-dotenv
-uvicorn
-aiofiles
-fastapi
-httpx
-jinja2
-openai
-pydantic
-python-dotenv
-python-multipart
-uvicorn
-fastapi
-jinja2
-openai
-python-dotenv
-starlette
-uvicorn
 requests
-fastapi
-jinja2
-openai
-pydantic
-python-multipart
-uvicorn
-openai
-fastapi
-jinja2
-uvicorn
-uvicorn
-aiofiles
-fastapi
-jinja2
-openai
-python-dotenv
-python-multipart
-uvicorn
-flask
-fastapi
-flask
-python-dotenv
-uvicorn
-flask
-aiofiles
-fastapi
-flask
-httpx
-jinja2
-openai
-pydantic
-python-dotenv
-python-multipart
-uvicorn
-flask-login
-flask-wtf
-fastapi
-flask
-openai
-python-dotenv
-starlette
-uvicorn
-aiofiles
-fastapi
 flask
 flask-login
 flask-wtf
-httpx
-jinja2
-openai
-pydantic
-python-dotenv
-python-multipart
-uvicorn
-python-dotenv
-fastapi
-flask
-openai
-pydantic
-python-dotenv
-uvicorn
-fastapi
-flask
 flask-cors
-openai
-python-dotenv
 starlette
-uvicorn
-fastapi
-flask
-openai
-python-dotenv
-uvicorn
-fastapi
-flask
-openai
-pydantic
-python-dotenv
-uvicorn
